# orgkit

./: .gitignore  LICENSE-MIT.txt  README.md  pyproject.toml  pyrightconfig.json
src/orgkit/: __init__.py  __main__.py  cache.py  cli.py  config.py  hooks.py  log.py  plugin.py  repos.py  sh.py  worktrees.py
src/orgkit/commands/: __init__.py  config_cmd.py  prune.py  self_cmd.py  stack.py  sync.py
tests/: test_cli.py  test_config.py  test_hooks.py  test_plugin.py  test_prune.py  test_repos.py  test_stack.py  test_worktrees.py
