[project]
name = "orgkit"
version = "0.1.0"
description = "Multi-repo workspace toolkit for GitHub orgs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0"
authors = [{ name = "ada-x64" }]
dependencies = [
    "tomlkit>=0.13",
    "typer>=0.12",
]

[project.scripts]
ok = "orgkit.cli:app"

[project.urls]
Homepage = "https://github.com/ada-x64/orgkit"

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orgkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Typer's API requires sentinel calls in defaults.
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
